styles.css
:root {
    --background-colour: #000000;
    --header-colour: #A51414;
    --footer-colour: #A51414;
    --navbar-colour: #000000;
    --content-colour: #D4D3D3;
    --dark-font-colour: #000000;
    --light-font-colour: #FDFFFC;
    --link-font-colour: #A51414;
}

html {
    height: 100%;
}

body {
    height: 100%;
    display: flex;
    flex-direction: column;
    background-color: var(--background-colour);
    margin: auto;
    align-content: center;
    font-family: 'Lexend Deca', "Arial", sans-serif;
    font-size: 16px;
    line-height: 1.6;
}

.contents {
    margin: auto;
    max-width: 800px;
    padding: 20px 40px;
}

.contents_wrapper {
    flex-grow: 1;
    background-color: var(--content-colour);
    color: var(--dark-colour);
    text-align: justify;
}

a {
    color: var(--link-font-colour);
}

table {
    width: 100%
}

.header {
    display: flex;
    flex-wrap: wrap;
    flex-direction: row;
    align-items: center;
    justify-content: center;
    background-color: var(--header-colour);
    color: var(--light-font-colour);
    padding-top: 10px;
    padding-bottom: 0px;
}

.header_text {
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    margin: 20px;
}

h1 {
    font-size: 85px;
    font-weight: 100;
    line-height: 1;
}

h2 {
    font-size: 40px;
    font-weight: 100;
}

.header_text h1, .header_text h2 {
    margin: 0px;
}

.headshot {
    height: 150px;
    width: 150px;
    float: right;
    padding: 18px 0 0 24px;
}

.nav_bar {
    display: flex;
    list-style-type: none;
    margin: 0;
    padding: 0;
    padding-left: 10px;
    padding-right: 10px;
    background-color: var(--navbar-colour);
    font-size: 24px;
    border-width: 10px;
    border-color: var(--navbar-colour);
    border-top-style: solid;
    border-bottom-style: solid;
}

.nav_bar li {
    flex-grow: 1;
    border-left-color: var(--light-font-colour);
    border-left-style: solid;
    border-left-width: 2px;
}

.nav_bar li:last-child {
    border-right-style: none;
}

.nav_bar li:first-child {
    border-left-style: none;
}

.nav_bar li a {
    display: block;
    text-align: center;
    text-decoration: none;
    color: var(--light-font-colour);
}


@media only screen and (max-width: 650px) {
    .portfolio_source_image {
        display: none;
    }
}

.portfolio_table td {
    text-align: left;
    height: 50px;
    vertical-align: middle;
}

.portfolio_source_image {
    margin-top: 2px;
    margin-left: 10px;
    margin-right: 15px;
    height: 26px;
    width: 26px;
    padding: 1px;
}

.important_portfolio_entry {
    font-size: 20pt;
}

.email {
    text-align: center;
}

.profile_list {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    list-style-type: none;
    margin-top: 10px;
    font-size: 16px;
}

.profile_list li {
    padding-right: 10px;
}

.footer {
    background-color: var(--footer-colour);
    color: var(--light-font-colour);
    font-size: 14px;
    padding-top: 10px;
    padding-bottom: 10px;
    padding-left: 20px;
    padding-right: 20px;
    margin-top: 0px;
    text-align: center;
}

.footer a {
    text-decoration: none;
    color: var(--light-font-colour);
}

